added Back link to 07-19-13

--- a/pcc/07-19-13/index.html
+++ b/pcc/07-19-13/index.html
@@ -33,6 +33,7 @@
     <li><a href="songs/awake_my_soul.pdf">Awake My Soul</a></li>
     <li><a href="songs/christ_is_risen.pdf">Christ Is Risen</a></li>
     <li><a href="songs/take_heart.pdf">Take Heart</a></li>
+    <li><a href="..">Back</a></li>
 </ul>
         
       </div>
