added links to main page

--- a/index.html
+++ b/index.html
@@ -28,8 +28,12 @@
           <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to my webpage!</h3>
 
-<p>Contents coming soon!</p>
-
+<p>Contents coming soon! For now, check out these links:</p>
+  <ul>
+    <li><a href="javascript:null()">Resume (coming soon)</a></li>
+    <li><a href="www.linkedin.com/in/ercgn">LinkedIn</a></li>
+    <li><a href="github.com/ercgn">GitHub</a></li>
+  </ul>
         
       </div>
     </div>
