fixed links to main page

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 <p>Contents coming soon! For now, check out these links:</p>
   <ul>
     <li><a href="javascript:null()">Resume (coming soon)</a></li>
-    <li><a href="www.linkedin.com/in/ercgn">LinkedIn</a></li>
-    <li><a href="github.com/ercgn">GitHub</a></li>
+    <li><a href="http://www.linkedin.com/in/ercgn">LinkedIn</a></li>
+    <li><a href="https://github.com/ercgn">GitHub</a></li>
   </ul>
         
       </div>
