accomodated pdf addition in 07-26-13

--- a/pcc/07-26-13/index.html
+++ b/pcc/07-26-13/index.html
@@ -30,9 +30,9 @@
 
 <ul>
     <li><a href="slides">Slides</a></li>
-    <li><a href="songs/awake_my_soul.pdf">Awake My Soul</a></li>
-    <li><a href="songs/christ_is_risen.pdf">Christ Is Risen</a></li>
-    <li><a href="songs/take_heart.pdf">Take Heart</a></li>
+    <li><a href="songs/beautiful_saviour.pdf">Beautiful Saviour</a></li>
+    <li><a href="songs/forever_reign.pdf">Forever Reign</a></li>
+    <li><a href="songs/how_he_loves.pdf">How He Loves</a></li>
     <li><a href="..">Back</a></li>
 </ul>
         
