--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <p>Contents coming soon! For now, check out these links:</p>
   <ul>
-    <li><a href="resumeF13.pdf">Resume</a> (Last Updated 12/14/13)</li>
+    <li><a href="resume.pdf">Resume</a> (Last Updated 2/20/14)</li>
     <li><a href="http://www.linkedin.com/in/ercgn">LinkedIn</a></li>
     <li><a href="https://github.com/ercgn">GitHub</a></li>
   </ul>
