--- a/acf/schedule.html
+++ b/acf/schedule.html
@@ -26,8 +26,8 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <!-- <li ><a href="/">Home</a></li> -->
-                <li class="active"><a href="/schedule">Schedule</a></li> 
-                <li ><a href="/prayer">Prayer Requests</a></li>
+                <li class="active"><a href="schedule">Schedule</a></li> 
+                <li ><a href="prayer">Prayer Requests</a></li>
             </ul>
         </div>
     </div>
