Added links to 6/9/14 hangout

--- a/acf/schedule.html
+++ b/acf/schedule.html
@@ -64,8 +64,8 @@
                 <td>June 9th, 2014</td>
                 <td>9pm Eastern (6pm Pacific)</td>
                 <td>1 Peter 1:1-25</td>
-                <td></td>
-                <td></td>
+                <td><a href="https://plus.google.com/hangouts/_/ext5n7zgbjh2fo2bgs7ygsyhceb?hl=en">Click Here</a></td>
+                <td><a href="https://docs.google.com/document/d/1fXnApRc6C12q8YSRNyuCX5Z3_0SmvzH-faOt_J_8Z9M/edit?usp=sharing">Click Here</a></td>
               </tr>
               <tr>
                 <td>June 16th, 2014</td>
