--- a/acf/schedule.html
+++ b/acf/schedule.html
@@ -71,8 +71,8 @@
                 <td>June 16th, 2014</td>
                 <td>9pm Eastern (6pm Pacific)</td>
                 <td>1 Peter 2:1-12</td>
-                <td></td>
-                <td></td>
+                <td><a href="https://plus.google.com/hangouts/_/gt4t6obh4p3ww5ap2ne2sw2ziua?hl=en">Click Here</a></td>
+                <td><a href="https://docs.google.com/document/d/1TX6x-mj6j31nIJ0BrU_4cudAR1Zkvi6tnedxA0Z2_OM/edit">Click Here</a></td>
               </tr>
               <tr>
                 <td>June 23rd, 2014</td>
