--- a/acf/schedule.html
+++ b/acf/schedule.html
@@ -78,8 +78,8 @@
                 <td>June 23rd, 2014</td>
                 <td>9pm Eastern (6pm Pacific)</td>
                 <td>1 Peter 2:13-3:7</td>
-                <td></td>
-                <td></td>
+                <td><a href="https://plus.google.com/hangouts/_/gt5ojbsxvo4kzxs6ujapczic7qa">Click Here</a></td>
+                <td><a href="https://docs.google.com/document/d/196CbAOR7DZXXK3_QfR_LH0xnNanMUvETalH3QlxNyDQ/edit?usp=sharing">Click Here</a></td>
               </tr>
               <tr>
                 <td>June 30th, 2014</td>
