Modified schedule to include a break at 7/7/14

--- a/acf/schedule.html
+++ b/acf/schedule.html
@@ -90,43 +90,43 @@
               </tr>
               <tr>
                 <td>July 7th, 2014</td>
-                <td>9pm Eastern (6pm Pacific)</td>
-                <td>1 Peter 4:1-19</td>
+                <td><font color="red">BREAK</font></td>
+                <td><font color="red">BREAK</font></td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
                 <td>July 14th, 2014</td>
                 <td>9pm Eastern (6pm Pacific)</td>
-                <td>1 Peter 5:1-14</td>
+                <td>1 Peter 4:1-19</td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
                 <td>July 21st, 2014</td>
                 <td>9pm Eastern (6pm Pacific)</td>
-                <td>2 Peter 1:1-15</td>
+                <td>1 Peter 5:1-14</td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
                 <td>July 28th, 2014</td>
                 <td>9pm Eastern (6pm Pacific)</td>
-                <td>2 Peter 2:1-22</td>
+                <td>2 Peter 1:1-15</td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
                 <td>August 4th, 2014</td>
                 <td>9pm Eastern (6pm Pacific)</td>
-                <td>2 Peter 3:1-18</td>
+                <td>2 Peter 2:1-22</td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
                 <td>August 11th, 2014</td>
                 <td>9pm Eastern (6pm Pacific)</td>
-                <td>TBD</td>
+                <td>2 Peter 3:1-18</td>
                 <td></td>
                 <td></td>
               </tr>
