--- a/acf/schedule.html
+++ b/acf/schedule.html
@@ -85,8 +85,8 @@
                 <td>June 30th, 2014</td>
                 <td>9pm Eastern (6pm Pacific)</td>
                 <td>1 Peter 3:8-22</td>
-                <td></td>
-                <td></td>
+                <td><a href="https://plus.google.com/hangouts/_/gwrrzhwkpdknhk5qgj57sb54pqa">Click Here</a></td>
+                <td><a href="https://docs.google.com/document/d/13Y_qh6jYHtN_xMzZT6e5r49uevbSaBEt7M8tLnWXZz4/edit?usp=sharing">Click Here</a></td>
               </tr>
               <tr>
                 <td>July 7th, 2014</td>
