--- a/acf/schedule.html
+++ b/acf/schedule.html
@@ -85,7 +85,7 @@
                 <td>June 30th, 2014</td>
                 <td>9pm Eastern (6pm Pacific)</td>
                 <td>1 Peter 3:8-22</td>
-                <td><font color="red">BREAK</font></td>
+                <td><font color="red">Ended</font></td>
                 <td><a href="https://docs.google.com/document/d/13Y_qh6jYHtN_xMzZT6e5r49uevbSaBEt7M8tLnWXZz4/edit?usp=sharing">Click Here</a></td>
               </tr>
               <tr>
@@ -98,35 +98,35 @@
               <tr>
                 <td>July 14th, 2014</td>
                 <td>9pm Eastern (6pm Pacific)</td>
-                <td>1 Peter 4:1-19</td>
+                <td>1 Peter 4:1-5:14</td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
                 <td>July 21st, 2014</td>
                 <td>9pm Eastern (6pm Pacific)</td>
-                <td>1 Peter 5:1-14</td>
+                <td>2 Peter 1:1-15</td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
                 <td>July 28th, 2014</td>
                 <td>9pm Eastern (6pm Pacific)</td>
-                <td>2 Peter 1:1-15</td>
+                <td>2 Peter 2:1-22</td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
                 <td>August 4th, 2014</td>
                 <td>9pm Eastern (6pm Pacific)</td>
-                <td>2 Peter 2:1-22</td>
+                <td>2 Peter 3:1-18</td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
                 <td>August 11th, 2014</td>
                 <td>9pm Eastern (6pm Pacific)</td>
-                <td>2 Peter 3:1-18</td>
+                <td>TBD</td>
                 <td></td>
                 <td></td>
               </tr>
