--- a/acf/schedule.html
+++ b/acf/schedule.html
@@ -99,7 +99,7 @@
                 <td>July 14th, 2014</td>
                 <td>9pm Eastern (6pm Pacific)</td>
                 <td>1 Peter 4-5</td>
-                <td><a href="https://plus.google.com/hangouts/_/g4kfsy3ikuz3rlvhwtypzmokh4a">Click Here</a></td>
+                <td><font color="red">Ended</font></td>
                 <td><a href="https://docs.google.com/document/d/1uL78NAsETZwyMurd7KzVmbrBzsHz8trIjQRkYuHHgmk/edit">Click Here</a></td>
               </tr>
               <tr>
