--- a/acf/schedule.html
+++ b/acf/schedule.html
@@ -106,8 +106,8 @@
                 <td>July 21st, 2014</td>
                 <td>9pm Eastern (6pm Pacific)</td>
                 <td>2 Peter 1:1-15</td>
-                <td></td>
-                <td></td>
+                <td><a href="https://plus.google.com/hangouts/_/g74ei26f6fhb2iqdo4kunx5pxya">Click Here</a></td>
+                <td><a href="https://docs.google.com/document/d/1kXED4yrf3Jck7S2LFEbewgCGOwwI0_Dldu_kTNV8vwA/edit">Click Here</a></td>
               </tr>
               <tr>
                 <td>July 28th, 2014</td>
