Removed 7/28/14 bible study links

--- a/acf/schedule.html
+++ b/acf/schedule.html
@@ -113,7 +113,7 @@
                 <td>July 28th, 2014</td>
                 <td>9pm Eastern (6pm Pacific)</td>
                 <td>2 Peter 2:1-22</td>
-                <td><a href="https://plus.google.com/hangouts/_/gufmmawgyk4htvssvqai6do5rqa">Click Here</a></td>
+                <td><font color="red">Ended</font></td>
                 <td><a href="https://docs.google.com/document/d/1P00sOqMDuPQUG99zA1gRq86OFOKYgjtPoQfaI0xhCig/edit?usp=sharing">Click Here</a></td>
               </tr>
               <tr>
