--- a/acf/schedule.html
+++ b/acf/schedule.html
@@ -120,8 +120,8 @@
                 <td>August 4th, 2014</td>
                 <td>9pm Eastern (6pm Pacific)</td>
                 <td>2 Peter 3:1-18</td>
-                <td></td>
-                <td></td>
+                <td><a href="https://plus.google.com/hangouts/_/gs6erpcqjj5sou76sj46pe4abma?hl=en">Click Here</a></td>
+                <td><a href="https://docs.google.com/document/d/10kEj6IL5jRfxx15WSQLAe6S48Acaqfuzi1si93XcQAs/edit?usp=sharing">Click Here</a></td>
               </tr>
               <tr>
                 <td>August 11th, 2014</td>
