Added new 2015 bible study page

--- a/acf/archive.html
+++ b/acf/archive.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Bible Study</title>
+        <title>Archives</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="/public/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all"/>
         <style>
@@ -36,10 +36,10 @@
         <a class="navbar-brand" href="index">ACF Summer Bible Study</a>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <!-- <li class="active"><a href="/">Home</a></li> -->
+                <!-- <li ><a href="/">Home</a></li> -->
                 <li ><a href="schedule">Schedule</a></li> 
                 <li ><a href="prayer">Prayer Requests</a></li>
-                <li ><a href="archive">Archive</a></li>
+                <li class="active"><a href="archive">Archive</a></li>
             </ul>
         </div>
     </div>
@@ -47,15 +47,15 @@
 
         <div class="container">
             
-	<div class="starter-template">
-        <div class="col-md-8">       
-		<h1>Hello!</h1>
-		     <p>Welcome to the Unofficial ACF Summer Bible Study hub (2014 Edition). All info and links will be posted to this page, so please <strong>bookmark this page.</strong> It'll make your life easier. I promise!</p>
-             <p>For this summer, we will be studying the letters of Peter, namely <strong>1 and 2 Peter</strong>. These are two letters Peter wrote to various churches facing persecution for their faith. In Peter's first letter, he encourages suffering Christians to maintian their personal holiness in the midst of their persecution. In his second letter, he warns Christians against the increasing number of false teachers and prophets.</p>
-             <p>This will be a ten-week study. The schedule is posted under the Schedule tab. We will be communicating via Google Hangouts. Hope to see you guys there!</p>
-             <p>Any questions/concerns, contact <a href="mailto:ericgan@cmu.edu?Subject=ACF%20Summer%20Bible%20Questions" target="_top">Eric Gan.</a></p>
+    <div class="starter-template">
+        <div class="col-md-8">
+            <h1>Archives</h1>
+            <ul>
+                <li><a href="2014">Summer 2014</a></li>
+            </ul>
+
         </div>
-	</div>
+    </div>
 
         </div>
         <script src="//code.jquery.com/jquery.min.js"></script>
