--- a/acf/prayer.html
+++ b/acf/prayer.html
@@ -39,6 +39,7 @@
                 <!-- <li ><a href="/">Home</a></li> -->
                 <li ><a href="schedule">Schedule</a></li> 
                 <li class="active"><a href="prayer">Prayer Requests</a></li>
+                <li ><a href="archive">Archive</a></li>
             </ul>
         </div>
     </div>
@@ -53,8 +54,12 @@
                 <p>Do not be anxious about anything, but in everything by prayer and supplication with thanksgiving let your requests be made known to God. And the peace of God, which surpasses all understanding, will guard your hearts and your minds in Christ Jesus.</p>
                 <footer>Philippians 4:6-7</footer>
             </blockquote>
-            <p>Prayer Requests can be found on the <a href="http://padlet.com/ericgan/summerprayer">Padlet Wall</a>.</p>
-            <p><a class="btn btn-primary btn-large" href="http://padlet.com/ericgan/summerprayer">Go to our Padlet Wall &raquo;</a></p>
+            <p>Prayer is vital. As the primary means of communcation between us and God, prayer keeps us guarded, changes us, and reminds us to be dependent on God. When we pray and give thanks to our God, we declare to Satan that he has no stronghold in our life and that Christ's ressurection is our victory. Let us spur each other on by praying for each other! </p>
+            <p>Below is a link to a Padlet wall where you can share your prayer requests as they come.</p>
+            <p><a class="btn btn-primary btn-large"
+            href="http://padlet.com/ericgan/summer2015">Go to our Padlet Wall &raquo;</a></p>
+            <p>Or check out last summer's <a
+            href="http://padlet.com/ericgan/summerprayer">Padlet Wall (2014)</a>.</p>
         </div>
     </div>
 
