Added Summer 2015 text and links

--- a/acf/schedule.html
+++ b/acf/schedule.html
@@ -62,72 +62,72 @@
             </thread>
             <tbody>
               <tr>
-                <td>June 9th, 2014</td>
+                <td>June 1st, 2015</td>
                 <td>9pm Eastern (6pm Pacific)</td>
-                <td>1 Peter 1:1-25</td>
-                <td><font color="red">Ended</font></td>
-                <td><a href="https://docs.google.com/document/d/1fXnApRc6C12q8YSRNyuCX5Z3_0SmvzH-faOt_J_8Z9M/edit?usp=sharing">Click Here</a></td>
-              </tr>
-              <tr>
-                <td>June 16th, 2014</td>
-                <td>9pm Eastern (6pm Pacific)</td>
-                <td>1 Peter 2:1-12</td>
-                <td><font color="red">Ended</font></td>
-                <td><a href="https://docs.google.com/document/d/1TX6x-mj6j31nIJ0BrU_4cudAR1Zkvi6tnedxA0Z2_OM/edit">Click Here</a></td>
-              </tr>
-              <tr>
-                <td>June 23rd, 2014</td>
-                <td>9pm Eastern (6pm Pacific)</td>
-                <td>1 Peter 2:13-3:7</td>
+                <td>1 John 1:1-2:6</td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
-                <td>June 30th, 2014</td>
+                <td>June 8th, 2015</td>
                 <td>9pm Eastern (6pm Pacific)</td>
-                <td>1 Peter 3:8-22</td>
+                <td>1 John 2:7-17</td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
-                <td>July 7th, 2014</td>
+                <td>June 15th, 2015</td>
                 <td>9pm Eastern (6pm Pacific)</td>
-                <td>1 Peter 4:1-19</td>
+                <td>1 John 2:18-27</td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
-                <td>July 14th, 2014</td>
+                <td>June 22nd, 2015</td>
                 <td>9pm Eastern (6pm Pacific)</td>
-                <td>1 Peter 5:1-14</td>
+                <td>1 John 2:28-3:10</td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
-                <td>July 21st, 2014</td>
+                <td>June 29th, 2015</td>
                 <td>9pm Eastern (6pm Pacific)</td>
-                <td>2 Peter 1:1-15</td>
+                <td>1 John 3:11-24</td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
-                <td>July 28th, 2014</td>
+                <td>July 6th, 2015</td>
                 <td>9pm Eastern (6pm Pacific)</td>
-                <td>2 Peter 2:1-22</td>
+                <td>1 John 4:1-21</td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
-                <td>August 4th, 2014</td>
+                <td>July 13th, 2015</td>
                 <td>9pm Eastern (6pm Pacific)</td>
-                <td>2 Peter 3:1-18</td>
+                <td>1 John 5:1-12</td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
-                <td>August 11th, 2014</td>
+                <td>July 20th, 2015</td>
                 <td>9pm Eastern (6pm Pacific)</td>
-                <td>TBD</td>
+                <td>1 John 5:13-21</td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>July 27th, 2015</td>
+                <td>9pm Eastern (6pm Pacific)</td>
+                <td>2 John 1:1-13</td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>August 3rd, 2015</td>
+                <td>9pm Eastern (6pm Pacific)</td>
+                <td>3 John 1:1-15</td>
                 <td></td>
                 <td></td>
               </tr>
