Added links to Google Doc notes

--- a/acf/schedule.html
+++ b/acf/schedule.html
@@ -66,70 +66,70 @@
                 <td>9pm Eastern (6pm Pacific)</td>
                 <td>1 John 1:1-2:6</td>
                 <td></td>
-                <td></td>
+                <td><a href="https://docs.google.com/document/d/1K-0gMvStG6QSOXtD1BJx7lADgQxfHIGRO8kYtC-MNm0/edit?usp=sharing">Click Here</a></td>
               </tr>
               <tr>
                 <td>June 8th, 2015</td>
                 <td>9pm Eastern (6pm Pacific)</td>
                 <td>1 John 2:7-17</td>
                 <td></td>
-                <td></td>
+                <td><a href="https://docs.google.com/document/d/1zs85Fdwl9HggN4ILPHUbTq52ad1P0Abh7i7Dv3mNRr4/edit?usp=sharing">Click Here</a></td>
               </tr>
               <tr>
                 <td>June 15th, 2015</td>
                 <td>9pm Eastern (6pm Pacific)</td>
                 <td>1 John 2:18-27</td>
                 <td></td>
-                <td></td>
+                <td><a href="https://docs.google.com/document/d/1-qpbCe7F7uOqxmrHh348yA_ywUAaclvEGAbXg9_OsUo/edit?usp=sharing">Click Here</a></td>
               </tr>
               <tr>
                 <td>June 22nd, 2015</td>
                 <td>9pm Eastern (6pm Pacific)</td>
                 <td>1 John 2:28-3:10</td>
                 <td></td>
-                <td></td>
+                <td><a href="https://docs.google.com/document/d/1DZkz6N9tOJioD_E3Zw3ScoaC7muFgQChLp9ZdtFz9Eo/edit?usp=sharing">Click Here</a></td>
               </tr>
               <tr>
                 <td>June 29th, 2015</td>
                 <td>9pm Eastern (6pm Pacific)</td>
                 <td>1 John 3:11-24</td>
                 <td></td>
-                <td></td>
+                <td><a href="https://docs.google.com/document/d/1nuJy3UGafxiaxEiJHAo--snyoNpXDi-M0X3LXjJB2FE/edit?usp=sharing">Click Here</a></td>
               </tr>
               <tr>
                 <td>July 6th, 2015</td>
                 <td>9pm Eastern (6pm Pacific)</td>
                 <td>1 John 4:1-21</td>
                 <td></td>
-                <td></td>
+                <td><a href="https://docs.google.com/document/d/1Bm3iuw-EPhWjrGqSB8yH42hKEZ9WNoUIFCMUMktW5Lo/edit?usp=sharing">Click Here</a></td>
               </tr>
               <tr>
                 <td>July 13th, 2015</td>
                 <td>9pm Eastern (6pm Pacific)</td>
                 <td>1 John 5:1-12</td>
                 <td></td>
-                <td></td>
+                <td><a href="https://docs.google.com/document/d/1CsAC6ovyn0kChto20NwAW_8UFao9fz6JuSMpq1ygAGw/edit?usp=sharing">Click Here</a></td>
               </tr>
               <tr>
                 <td>July 20th, 2015</td>
                 <td>9pm Eastern (6pm Pacific)</td>
                 <td>1 John 5:13-21</td>
                 <td></td>
-                <td></td>
+                <td><a href="https://docs.google.com/document/d/1fahwSW7DxbPtKvo8TZ5PGwojx8Ko_m0jw_i-ceV2btc/edit?usp=sharing">Click Here</a></td>
               </tr>
               <tr>
                 <td>July 27th, 2015</td>
                 <td>9pm Eastern (6pm Pacific)</td>
                 <td>2 John 1:1-13</td>
                 <td></td>
-                <td></td>
+                <td><a href="https://docs.google.com/document/d/1e31iGwEiu4RgSCWsVk2fRcTHoU7tkxsa7xckLE_ntmA/edit?usp=sharing">Click Here</a></td>
               </tr>
               <tr>
                 <td>August 3rd, 2015</td>
                 <td>9pm Eastern (6pm Pacific)</td>
                 <td>3 John 1:1-15</td>
                 <td></td>
-                <td></td>
+                <td><a href="https://docs.google.com/document/d/14oXU9CfLDCb80wKR5ig3fyoycWinwy_nwavVeVhowJg/edit?usp=sharing">Click Here</a></td>
               </tr>
             </tbody>
         </table>
