--- a/acf/archive.html
+++ b/acf/archive.html
@@ -51,7 +51,7 @@
         <div class="col-md-8">
             <h1>Archives</h1>
             <ul>
-                <li><a href="2014">Summer 2014</a></li>
+                <li><a href="2014/schedule">Summer 2014</a></li>
             </ul>
 
         </div>
