Added 6/1/15 bible study link

--- a/acf/schedule.html
+++ b/acf/schedule.html
@@ -65,7 +65,7 @@
                 <td>June 1st, 2015</td>
                 <td>9pm Eastern (6pm Pacific)</td>
                 <td>1 John 1:1-2:6</td>
-                <td><a href="https://plus.google.com/hangouts/_/gzffcksfpnt2pdwwor74f3x5kaa">Click Here</a></td>
+                <td><font color="red">Ended</font></td>
                 <td><a href="https://docs.google.com/document/d/1K-0gMvStG6QSOXtD1BJx7lADgQxfHIGRO8kYtC-MNm0/edit?usp=sharing">Click Here</a></td>
               </tr>
               <tr>
