--- a/acf/schedule.html
+++ b/acf/schedule.html
@@ -28,7 +28,7 @@
     <body>
         <div class="navbar-header navbar navbar-inverse navbar-fixed-top">
     <div class="container">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -137,7 +137,7 @@
     </div>
 
         </div>
-        <script src="//code.jquery.com/jquery.min.js"></script>
+        <script src="http://code.jquery.com/jquery.min.js"></script>
         <script src="/public/js/bootstrap.min.js"></script>
     </body>
 </html>
