Removed 6/8 google hangout link

--- a/acf/schedule.html
+++ b/acf/schedule.html
@@ -72,7 +72,7 @@
                 <td>June 8th, 2015</td>
                 <td>9pm Eastern (6pm Pacific)</td>
                 <td>1 John 2:7-17</td>
-                <td><a href="https://plus.google.com/hangouts/_/gtpi7jotkge5q2t3cbvq4csvfea">Click Here</a></td>
+                <td><font color="red">Ended</font></td>
                 <td><a href="https://docs.google.com/document/d/1zs85Fdwl9HggN4ILPHUbTq52ad1P0Abh7i7Dv3mNRr4/edit?usp=sharing">Click Here</a></td>
               </tr>
               <tr>
