--- a/acf/schedule.html
+++ b/acf/schedule.html
@@ -79,14 +79,14 @@
                 <td>June 15th, 2015</td>
                 <td>9pm Eastern (6pm Pacific)</td>
                 <td>1 John 2:18-27</td>
-                <td><a href="https://plus.google.com/hangouts/_/g3pnf7bm24eu773ay26afdtyi4a">Click Here</a></td>
+                <td><font color="red">Ended</font></td>
                 <td><a href="https://docs.google.com/document/d/1-qpbCe7F7uOqxmrHh348yA_ywUAaclvEGAbXg9_OsUo/edit?usp=sharing">Click Here</a></td>
               </tr>
               <tr>
                 <td>June 22nd, 2015</td>
                 <td>9pm Eastern (6pm Pacific)</td>
                 <td>1 John 2:28-3:10</td>
-                <td></td>
+                <td><a href="https://plus.google.com/hangouts/_/g3pnf7bm24eu773ay26afdtyi4a">Click Here</a></td>
                 <td><a href="https://docs.google.com/document/d/1DZkz6N9tOJioD_E3Zw3ScoaC7muFgQChLp9ZdtFz9Eo/edit?usp=sharing">Click Here</a></td>
               </tr>
               <tr>
