--- a/acf/schedule.html
+++ b/acf/schedule.html
@@ -93,14 +93,14 @@
                 <td>June 29th, 2015</td>
                 <td>9pm Eastern (6pm Pacific)</td>
                 <td>1 John 3:11-24</td>
-                <td><a href="https://plus.google.com/hangouts/_/g3pnf7bm24eu773ay26afdtyi4a">Click Here</a></td>
+                <td><font color="red">Ended</font></td>
                 <td><a href="https://docs.google.com/document/d/1nuJy3UGafxiaxEiJHAo--snyoNpXDi-M0X3LXjJB2FE/edit?usp=sharing">Click Here</a></td>
               </tr>
               <tr>
                 <td>July 6th, 2015</td>
                 <td>9pm Eastern (6pm Pacific)</td>
                 <td>1 John 4:1-21</td>
-                <td></td>
+                <td><a href="https://plus.google.com/hangouts/_/g3pnf7bm24eu773ay26afdtyi4a">Click Here</a></td>
                 <td><a href="https://docs.google.com/document/d/1Bm3iuw-EPhWjrGqSB8yH42hKEZ9WNoUIFCMUMktW5Lo/edit?usp=sharing">Click Here</a></td>
               </tr>
               <tr>
