Added 7/13 bible study links

--- a/acf/schedule.html
+++ b/acf/schedule.html
@@ -100,14 +100,14 @@
                 <td>July 6th, 2015</td>
                 <td>9pm Eastern (6pm Pacific)</td>
                 <td>1 John 4:1-21</td>
-                <td><a href="https://plus.google.com/hangouts/_/gwxzcu4yuugc7hg5a55i7ofos4a">Click Here</a></td>
+                <td><font color="red">Ended</font></td>
                 <td><a href="https://docs.google.com/document/d/1Bm3iuw-EPhWjrGqSB8yH42hKEZ9WNoUIFCMUMktW5Lo/edit?usp=sharing">Click Here</a></td>
               </tr>
               <tr>
                 <td>July 13th, 2015</td>
                 <td>9pm Eastern (6pm Pacific)</td>
                 <td>1 John 5:1-12</td>
-                <td></td>
+                <td><a href="https://plus.google.com/hangouts/_/gwxzcu4yuugc7hg5a55i7ofos4a">Click Here</a></td>
                 <td><a href="https://docs.google.com/document/d/1CsAC6ovyn0kChto20NwAW_8UFao9fz6JuSMpq1ygAGw/edit?usp=sharing">Click Here</a></td>
               </tr>
               <tr>
