Ended Bible Study

--- a/acf/schedule.html
+++ b/acf/schedule.html
@@ -107,29 +107,15 @@
                 <td>July 13th, 2015</td>
                 <td>9pm Eastern (6pm Pacific)</td>
                 <td>1 John 5:1-12</td>
-                <td><a href="https://plus.google.com/hangouts/_/gwxzcu4yuugc7hg5a55i7ofos4a">Click Here</a></td>
+                <td><font color="red">Ended</font></td>
                 <td><a href="https://docs.google.com/document/d/1CsAC6ovyn0kChto20NwAW_8UFao9fz6JuSMpq1ygAGw/edit?usp=sharing">Click Here</a></td>
               </tr>
               <tr>
                 <td>July 20th, 2015</td>
                 <td>9pm Eastern (6pm Pacific)</td>
                 <td>1 John 5:13-21</td>
-                <td></td>
+                <td><font color="red">Ended</font></td>
                 <td><a href="https://docs.google.com/document/d/1fahwSW7DxbPtKvo8TZ5PGwojx8Ko_m0jw_i-ceV2btc/edit?usp=sharing">Click Here</a></td>
-              </tr>
-              <tr>
-                <td>July 27th, 2015</td>
-                <td>9pm Eastern (6pm Pacific)</td>
-                <td>2 John 1:1-13</td>
-                <td></td>
-                <td><a href="https://docs.google.com/document/d/1e31iGwEiu4RgSCWsVk2fRcTHoU7tkxsa7xckLE_ntmA/edit?usp=sharing">Click Here</a></td>
-              </tr>
-              <tr>
-                <td>August 3rd, 2015</td>
-                <td>9pm Eastern (6pm Pacific)</td>
-                <td>3 John 1:1-15</td>
-                <td></td>
-                <td><a href="https://docs.google.com/document/d/14oXU9CfLDCb80wKR5ig3fyoycWinwy_nwavVeVhowJg/edit?usp=sharing">Click Here</a></td>
               </tr>
             </tbody>
         </table>
