Fixed red bold in index.html

--- a/acf/index.html
+++ b/acf/index.html
@@ -51,7 +51,7 @@
         <div class="col-md-8">       
         <h1>Hello!</h1>
              <p>Welcome to the Unofficial ACF Summer Bible Study hub (2015 Edition). All info and links will be posted to this page, so please <strong>bookmark this page.</strong> It'll make your life easier. I promise!</p>
-             <p><font color="red"><strong>EDIT:</strong></font> Bible study for summer 2015 has prematurely ended on July 20th, 2015. We only covered 1 John and ended up not studying 2 and 3 John.</p>
+             <p><font color="red"><strong>NOTE:</strong> Bible study for summer 2015 has prematurely ended on July 20th, 2015. We only covered 1 John and ended up not studying 2 and 3 John.</font></p>
              <p>For this summer, we will be studying the letters of John, namely <strong>1, 2 and 3 John</strong>. <a href="http://en.wikipedia.org/wiki/Epistles_of_John">The Epistles of John</a> are a collection of letters believed to be written by John the Evangelist. The first letter was written as a sermon to help them understand why such a divine God would come live a mortal life and die an agonizing death. The second and third letters are targetted letters written to the "elect lady" and Gaius, respectively.</p>
              <p>This series will be a ten-week study. The schedule is posted under the Schedule tab. We will be communicating via Google Hangouts. Hope to see you guys there!</p>
              <p>Any questions/concerns, contact <a href="mailto:ericgan@cmu.edu?Subject=ACF%20Summer%20Bible%20Questions" target="_top">Eric Gan.</a></p>
