--- a/praise-night/index.html
+++ b/praise-night/index.html
@@ -8,6 +8,9 @@
     <head>
         <title>All Campus Praise Night - IFA</title>
         <meta charset="utf-8" />
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta name="description" content="Landing page for all campus praise night." />
+		<meta name="keywords" content="Carnegie Mellon University Inter Fellowship Association All Campus Praise Night" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
         <link rel="stylesheet" href="assets/css/main.css" />
