Fixed publicity text

--- a/praise-night/index.html
+++ b/praise-night/index.html
@@ -123,7 +123,7 @@
                             <section class="spotlight">
                                 <div class="image"><img src="images/publicity.jpg" alt="" /></div><div class="content">
                                     <h2>Publicity</h2>
-                                    <p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+                                    <p>Publicity includes <strong>outreach</strong>. We need volunteers to make this night of praise known to the CMU campus. Volunteers will help with postering, chalking, and flyering during the weeks before the event.</p>
                                 </div>
                             </section>
                             <section class="spotlight">
