--- a/praise-night/index.html
+++ b/praise-night/index.html
@@ -68,7 +68,7 @@
                             <header class="major">
                                 <h2>Event Information</h2>
                                 <p>
-                                    All Campus Praise Night is one night where Christians from all over CMU<br />come together to praise the one true living God of the Bible. <br />This semester, the event will be held on <strong>September 5, 8:30 PM @ Porter Hall 100</strong>.
+                                    All Campus Praise Night is one night where Christians from all over CMU <br />come together to praise the one true living God of the Bible. <br />This semester, the event will be held on <strong>September 5, 8:30 PM @ Porter Hall 100</strong>.
                                 </p>
                             </header>
                         </div>
@@ -82,7 +82,7 @@
                         <div class="row uniform">
                             <div class="3u"></div>
                             <div class="6u">
-                                <p><em><span style="font-size: 1.25em;">When I look at your heavens, the work of your fingers the moon and the stars, which you have set in place, what is man that you are mindful of him, and the son of man that you care for him?"</span></em><br /><span style="font-size: 0.75em;">(Psalm 8:3-4 ESV)</span></p>
+                                <p><em><span style="font-size: 1.25em;">When I look at Your heavens, the work of Your fingers the moon and the stars, which You have set in place, what is man that You are mindful of him, and the son of man that You care for him?"</span></em><br /><span style="font-size: 0.75em;">(Psalm 8:3-4 ESV)</span></p>
                             <br />
                             </div>
                             <div class="3u"></div>
@@ -129,7 +129,7 @@
                             <section class="spotlight">
                                 <div class="image"><img src="images/prayer.jpg" alt="" /></div><div class="content">
                                     <h2>Prayer</h2>
-                                    <p>We believe in the importance of prayer. We need ‘united, persistent, and kingdom centered’ prayers to be lifted up to God in preparation for this event. We also need <strong>bold</strong> individuals who can lead attendees in a <strong>moderated prayer</strong> during the event. </p>
+                                    <p>We believe in the importance of prayer. We need ‘united, persistent, and kingdom-centered’ prayers to be lifted up to God in preparation for this event. We also need <strong>bold</strong> individuals who can lead attendees in a <strong>moderated prayer</strong> during the event. </p>
                                 </div>
                             </section>
                             <br/><br/><br/>
