--- a/praise-night/index.html
+++ b/praise-night/index.html
@@ -8,9 +8,9 @@
     <head>
         <title>All Campus Praise Night - IFA</title>
         <meta charset="utf-8" />
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="Landing page for all campus praise night." />
-		<meta name="keywords" content="Carnegie Mellon University Inter Fellowship Association All Campus Praise Night" />
+        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+        <meta name="description" content="Landing page for all campus praise night." />
+        <meta name="keywords" content="Carnegie Mellon University Inter Fellowship Association All Campus Praise Night" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
         <link rel="stylesheet" href="assets/css/main.css" />
@@ -68,7 +68,7 @@
                             <header class="major">
                                 <h2>Event Information</h2>
                                 <p>
-                                    All Campus Praise Night is one night where Christians from all over CMU <br />come together to praise the one true living God of the Bible. <br />This semester, the event will be held on <strong>September 5, 8:30 PM @ Porter Hall 100</strong>.
+                                    All Campus Praise Night is one night where Christians from all over CMU <br />come together to praise the one true living God of the Bible. <br />This semester, the event will be held on <strong>September 5, 7:30 PM @ Porter Hall 100</strong>.
                                 </p>
                             </header>
                         </div>
@@ -90,7 +90,7 @@
                         <div class="row uniform">
                             <div class="2u"></div>
                             <div class="8u">
-                                <p>Our theme for this Praise Night is <strong>GREATER</strong>. He not only created this whole universe, but also loved us insignificant beings so much that He offered up Jesus as a sacrifice so that we may live eternally. We often forget how colossial God is and how inconsequential we are. We want to remind Christians that we can live <strong>boldly</strong> for Christ because this mighty God is <strong>for us</strong>.<br /><br /><br /></p>
+                                <p>Our theme for this Praise Night is <strong>GREATER</strong>. He not only created this whole universe, but also loved us insignificant beings so much that He offered up Jesus as a sacrifice so that we may live eternally. We often forget how colossal God is and how inconsequential we are. We want to remind Christians that we can live <strong>boldly</strong> for Christ because this mighty God is <strong>for us</strong>.<br /><br /><br /></p>
                             </div>
                             <div class="2u"></div>
                         </div>
