Added fb event link

--- a/praise-night/index.html
+++ b/praise-night/index.html
@@ -82,7 +82,7 @@
                         <div class="row uniform">
                             <div class="3u"></div>
                             <div class="6u">
-                                <p><em><span style="font-size: 1.25em;">When I look at Your heavens, the work of Your fingers the moon and the stars, which You have set in place, what is man that You are mindful of him, and the son of man that You care for him?"</span></em><br /><span style="font-size: 0.75em;">(Psalm 8:3-4 ESV)</span></p>
+                                <p><em><span style="font-size: 1.25em;">"When I look at Your heavens, the work of Your fingers the moon and the stars, which You have set in place, what is man that You are mindful of him, and the son of man that You care for him?"</span></em><br /><span style="font-size: 0.75em;">(Psalm 8:3-4 ESV)</span></p>
                             <br />
                             </div>
                             <div class="3u"></div>
@@ -145,7 +145,7 @@
                             </header>
                             <ul class="actions">
                                 <li><a href="https://docs.google.com/forms/d/1BHcM5U6-0qlaKTLQp7RgBhpCS66vc-yi8qw3RGw5Lo0/viewform" class="button fit special" target="_blank">Volunteer Sign-Up</a></li>
-                                <li><a href="#" class="button fit" target="_blank">Facebook Event Page</a></li>
+                                <li><a href="https://www.facebook.com/events/841066859304898/" class="button fit" target="_blank">Facebook Event Page</a></li>
                             </ul>
                         </div>
                     </section>
