Finished simple identity site

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 							<h1>Eric Gan</h1>
-							<p>Software Engineer</p>
+							<p>
+								Software Engineer<br/>
+								Disciple of Christ
+							</p>
 						</header>
 <!--						<hr />
  						<h2>Extra Stuff!</h2>
@@ -64,9 +67,9 @@
 						<hr /> -->
 						<footer>
 							<ul class="icons">
-								<li><a href="#" class="fa-twitter">Twitter</a></li>
-								<li><a href="#" class="fa-instagram">Instagram</a></li>
-								<li><a href="#" class="fa-facebook">Facebook</a></li>
+								<li><a href="https://www.linkedin.com/in/ercgn" target="_blank" class="fa-linkedin">LinkedIn</a></li>
+								<li><a href="https://www.github.com/ercgn" target="_blank" class="fa-github">Github</a></li>
+								<li><a href="http://blog.ercgn.com" target="_blank" class="fa-tumblr">Tumblr</a></li>
 							</ul>
 						</footer>
 					</section>
@@ -74,7 +77,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Jane Doe</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Eric Gan</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
 
