Removed sass files + made all hyperlinks green (#09ab4b)

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Identity by HTML5 UP</title>
+		<title>Eric Gan</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/html5shiv.js"></script><![endif]-->
@@ -69,7 +69,7 @@
 							<ul class="icons">
 								<li><a href="https://www.linkedin.com/in/ercgn" target="_blank" class="fa-linkedin">LinkedIn</a></li>
 								<li><a href="https://www.github.com/ercgn" target="_blank" class="fa-github">Github</a></li>
-								<li><a href="http://blog.ercgn.com" target="_blank" class="fa-tumblr">Tumblr</a></li>
+								<li><a href="https://www.instagram.com/ercgn" target="_blank" class="fa-instagram">Instagram</a></li>
 							</ul>
 						</footer>
 					</section>
